Trying something else...

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,44 @@
-sudo: required
-
-dist: trusty
-
+sudo: false
 language: cpp
 
-compiler:
-  - gcc
+matrix:
+    include:
+        - env: COMPILER_VERSION=4.8
+          os: linux
+          compiler: g++
+          addons:
+              apt:
+                  sources:
+                      - ubuntu-toolchain-r-test
+                  packages:
+                      - g++-4.8
+                      - libcppunit-dev
 
-env: 
- - LLVM_VERSION=3.8.1
-  
-os:
-  - linux
+        - env: COMPILER_VERSION=4.9
+          os: linux
+          compiler: g++
+          addons:
+              apt:
+                  sources:
+                      - ubuntu-toolchain-r-test
+                  packages:
+                      - g++-4.9
+                      - libcppunit-dev
+
+        - env: COMPILER_VERSION=3.5
+          os: linux
+          compiler: clang++
+          addons:
+              apt:
+                  sources:
+                      - ubuntu-toolchain-r-test
+                      - llvm-toolchain-precise-3.5
+                  packages:
+                      - clang-3.5
+                     - libcppunit-dev
+
+before_script:
+    - echo "Using compilers $CXX-${COMPILER_VERSION} and $CC-${COMPILER_VERSION}"
 
 script:
-  - bash build.sh
-    
+    - bash build.sh
